@@ -14,6 +14,8 @@ Version 1.2.2-svn:
    * Wesbowl: the respawned units are fully healed again (bug #7776)
  * language and i18n:
    * updated translations: Danish, Japanese
+ * WML engine
+   * fixed era events not working on non hosts
 
 Version 1.2.2:
  * campaigns:
